# Changelog - ElvUI_mMediaTag
[Eng] - All changes to this project will be documented in this file. The latest changes are at the top.


## [ver. 3.30] - xx.02.2024
### FIX
- FIX - Dropdown menu Button height, depends now on Font size to prevent overlapping text
### Update
- UPDATE - Add Tooltip Anchor settings for Teleports Datatext

## [ver. 3.29] - 05.02.2024
### FIX
- FIX - German Locals
- FIX - Prevent nil error with TAG icons and wrong settings
- FIX - Mirror bug for Portraits
- FIX - Shadow bug with class icons for Portraits
- FIX - Portraits of other units with class icons enabled
- FIX - Swapped settings for docks XIV BG and XIV MAUI
### Update
- UPDATE - Update TAG icon defaults
- UPDATE - add Reload UI popup for Portraits class icons settings tp prevent errors

## [ver. 3.28] - 04.02.2024
### FIX
- FIX - Removed unused Settings from TAG settings menu
- FIX - Portrait Rare/Elite Texture Border and Shadow was swapped
### Update
- UPDATE - optimized some TAGs
- UPDATE - MediaPack TOC files
### NEW
- NEW - TAG mHealth with no no decimal for percents, all available under ElvUI available TAGs
- NEW - TAG mRoleIcon:blizz and mRoleIcon:target:blizz with default Blizzard Icons
- NEW - Many new Border Textures
- NEW - Portrait Texture
- NEW - German localization from Dlarge, thx for your support.

## [ver. 3.27] - 20.01.2024
### FIX
- FIX - Possible nil error with Dock Talents
### Update
- UPDATE - add Hearthstone of the Flame to Teleports menu
- UPDATE - TOC update for new WoW Version
### NEW
- NEW - Class icons for Portraits

## [ver. 3.26.1] - 27.12.2023
### FIX
- FIX - Removed and Disabled Custom Class colors again, since there are again bugs with this function.

## [ver. 3.26] - 26.12.2023
### FIX
- FIX - DOTI Telleport ID for TP Datatext
- FIX - TAG mClass:icon:noelite
- FIX - Compatibility fix for cosmetic bars with ElvUI_NutsAndBolts
### Update
- UPDATE - NEW Objectivetracker Skin, complete rework and more simplified