@@ -1,4 +1,4 @@
-## Interface: 100205
+## Interface: 100206
 ## Author: Blinkii
 ## Version: 1.11
 ## Title: |CFF6559F1m|r|CFFA037E9M|r|CFFDD14E0T|r - |CFFFF06A2M|r|CFFFF108Ce|r|CFFFF197Ad|r|CFFFF216Bi|r|CFFFF275Da|r |CFFFF3441P|r|CFFFF3F2Ca|r|CFFFF461Cc|r|CFFFF4E0Ck|r
